--- a/Twitter_Scroll_Meter/popup.html
+++ b/Twitter_Scroll_Meter/popup.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Twitter Scroll Meter</title>
+    <meta charset="UTF-8">
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
