--- a/Twitter_Scroll_Meter/popup.html
+++ b/Twitter_Scroll_Meter/popup.html
@@ -57,7 +57,7 @@
         <span id="result">0</span>
         <span id="t">[m]</span>
     </div>
-    <div><a href="test.html">settings</a></div>
+    <div><a href="setting.html">settings</a></div>
     <script src="popup.js"></script>
 </body>
 
