--- a/Twitter_Scroll_Meter/popup.html
+++ b/Twitter_Scroll_Meter/popup.html
@@ -47,6 +47,12 @@
             font-size: 1em;
             color: #666;
         }
+
+        #setting {
+            text-align: right;
+            padding-top: 5px;
+            padding-left: 5px;
+        }
     </style>
 </head>
 
@@ -57,7 +63,7 @@
         <span id="result">0</span>
         <span id="t">[m]</span>
     </div>
-    <div><a href="setting.html">settings</a></div>
+    <div id="setting"><a href="setting.html">settings</a></div>
     <script src="popup.js"></script>
 </body>
 
