--- a/Twitter_Scroll_Meter/setting.html
+++ b/Twitter_Scroll_Meter/setting.html
@@ -14,47 +14,60 @@
         }
 
         #ppi-display {
-            margin-top: 20px;
+            margin-top: 10px;
             font-size: 18px;
             font-weight: bold;
         }
 
         .input-group {
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
     </style>
 </head>
 
 <body>
 
-    <h2>スクロール量を正確に測るために以下の情報を入れてください！</h2>
+    <h3>正確に測るために以下の情報を入れてください！</h2>
 
-    <div class="input-group">
-        <label for="screen-size">ディスプレイのサイズ（インチ）:</label>
-        <input type="number" id="screen-size" placeholder="ex: 15.6" step="0.1">
-    </div>
+        <div class="input-group">
+            <label for="screen-size">ディスプレイのサイズ（インチ）:</label>
+            <input type="number" id="screen-size" placeholder="ex: 15.6" step="0.1">
+        </div>
 
-    <div class="input-group">
-        <label for="screen-width">解像度（横）:</label>
-        <input type="number" id="screen-width" placeholder="ex: 1920">
-    </div>
+        <div class="input-group">
+            <label for="screen-width">解像度（横）:</label>
+            <input type="number" id="screen-width" placeholder="ex: 1920">
+        </div>
 
-    <div class="input-group">
-        <label for="screen-height">解像度（縦）:</label>
-        <input type="number" id="screen-height" placeholder="ex: 1080">
-    </div>
+        <div class="input-group">
+            <label for="screen-height">解像度（縦）:</label>
+            <input type="number" id="screen-height" placeholder="ex: 1080">
+        </div>
 
-    <button id="calculatePPI">PPIを計算・設定する</button>
+        <button id="calculatePPI">PPIを計算・設定する</button>
 
-    <div id="ppi-display">PPI: 未設定</div>
+        <div id="ppi-display">PPI: 未設定</div>
 
-    <!-- 600x400の四角形 -->
-    <div id="rectangle"></div>
+        <!-- 600x400の四角形 -->
+        <div id="rectangle"></div>
 
-    <div id="tateyoko"></div>
-    <div id="moshikashite"></div>
+        <div id="tateyoko"></div>
+        <div id="moshikashite"></div>
 
-    <script src="setting.js"></script>
+        <h3>高度な設定</h3>
+        <div class="input-group">
+            <label for="debounceDelay">更新頻度 :</label>
+            <input type="number" id="debounceDelay" placeholder="default : 30">
+            <button id="setDebounceDelay">設定する</button>
+        </div>
+        <div class="input-group">
+            <label for="factor">補正係数 :</label>
+            <input type="number" id="factor" placeholder="default : 1">
+            <button id="setFactor">設定する</button>
+        </div>
+
+
+        <script src="setting.js"></script>
 </body>
 
 </html>
