--- a/Twitter_Scroll_Meter/setting.html
+++ b/Twitter_Scroll_Meter/setting.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <style>
         #rectangle {
-            width: 600px;
-            height: 400px;
+            width: 300px;
+            height: 200px;
             background-color: lightblue;
             margin-top: 20px;
             border: 2px solid black;
@@ -30,7 +30,7 @@
     <h3>正確に測るために以下の情報を入れてください！</h2>
 
         <div class="input-group">
-            <label for="screen-size">ディスプレイのサイズ（インチ）:</label>
+            <label for="screen-size">画面サイズ(inch):</label>
             <input type="number" id="screen-size" placeholder="ex: 15.6" step="0.1">
         </div>
 
@@ -65,6 +65,7 @@
             <input type="number" id="factor" placeholder="default : 1">
             <button id="setFactor">設定する</button>
         </div>
+        <div>Retinaディスプレイだと補正係数の設定が必要そう(自分が確認したのだと0.884辺りが適当)</div>
 
 
         <script src="setting.js"></script>
