--- a/Twitter_Scroll_Meter/setting.html
+++ b/Twitter_Scroll_Meter/setting.html
@@ -10,7 +10,7 @@
             height: 200px;
             background-color: lightblue;
             margin-top: 20px;
-            border: 2px solid black;
+            border: 1px solid black;
         }
 
         #ppi-display {
@@ -27,7 +27,7 @@
 
 <body>
 
-    <h3>正確に測るために以下の情報を入れてください！</h2>
+    <h3>正確に測定するために以下を設定してください</h2>
 
         <div class="input-group">
             <label for="screen-size">画面サイズ(inch):</label>
@@ -48,8 +48,10 @@
 
         <div id="ppi-display">PPI: 未設定</div>
 
-        <!-- 600x400の四角形 -->
+        <!-- 300x200の四角形 -->
         <div id="rectangle"></div>
+
+        <br>
 
         <div id="tateyoko"></div>
         <div id="moshikashite"></div>
