setting周りの修正

--- a/Twitter_Scroll_Meter/setting.html
+++ b/Twitter_Scroll_Meter/setting.html
@@ -35,12 +35,12 @@
         </div>
 
         <div class="input-group">
-            <label for="screen-width">解像度（横）:</label>
+            <label for="screen-width">解像度(横):</label>
             <input type="number" id="screen-width" placeholder="ex: 1920">
         </div>
 
         <div class="input-group">
-            <label for="screen-height">解像度（縦）:</label>
+            <label for="screen-height">解像度(縦):</label>
             <input type="number" id="screen-height" placeholder="ex: 1080">
         </div>
 
@@ -56,15 +56,16 @@
         <h3>高度な設定</h3>
         <div class="input-group">
             <label for="debounceDelay">更新頻度 :</label>
-            <input type="number" id="debounceDelay" placeholder="default : 30">
+            <input type="number" id="debounceDelay" placeholder="default: 30">
             <button id="setDebounceDelay">設定する</button>
         </div>
         <div class="input-group">
             <label for="factor">補正係数 :</label>
-            <input type="number" id="factor" placeholder="default : 1">
+            <input type="number" id="factor" placeholder="default: 1">
             <button id="setFactor">設定する</button>
         </div>
         <div>Retinaディスプレイだと補正係数の設定が必要そう(自分が確認したのだと0.884辺りが適当)</div>
+
 
 
         <script src="setting.js"></script>
