--- a/Twitter_Scroll_Meter/setting.html
+++ b/Twitter_Scroll_Meter/setting.html
@@ -5,18 +5,23 @@
     <title>Test</title>
     <meta charset="UTF-8">
     <style>
-        #rectangle {
-            width: 300px;
-            height: 200px;
-            background-color: lightblue;
-            margin-top: 20px;
-            border: 1px solid black;
+        h3 {
+            margin-top: 5px;
+            margin-bottom: 5px;
         }
 
         #ppi-display {
             margin-top: 10px;
             font-size: 18px;
             font-weight: bold;
+        }
+
+        #rectangle {
+            width: 300px;
+            height: 200px;
+            background-color: lightblue;
+            margin-top: 10px;
+            border: 1px solid black;
         }
 
         .input-group {
@@ -27,7 +32,7 @@
 
 <body>
 
-    <h3>正確に測定するために以下を設定してください</h2>
+    <h3>正確に測定するために設定してください</h2>
 
         <div class="input-group">
             <label for="screen-size">画面サイズ(inch):</label>
@@ -49,9 +54,9 @@
 
         <!-- 300x200の四角形 -->
         <div id="rectangle"></div>
-        <br>
-
         <div id="tateyoko"></div>
+        <div>(違うなら下の補正係数をいじってください)</div>
+
 
         <h3>高度な設定</h3>
         <div class="input-group">
@@ -64,7 +69,7 @@
             <input type="number" id="factor" placeholder="default: 1">
             <button id="setFactor">設定する</button>
         </div>
-        <div>Retinaディスプレイだと補正係数の設定が必要そう(自分が確認したのだと0.884辺りが適当)</div>
+        <div>(自分が確認したRetinaﾃﾞｨｽﾌﾟﾚｲだと0.885がおすすめ)</div>
 
 
 
