--- a/Twitter_Scroll_Meter/setting.html
+++ b/Twitter_Scroll_Meter/setting.html
@@ -70,9 +70,8 @@
             <button id="setFactor">設定する</button>
         </div>
         <div>(自分が確認したRetinaﾃﾞｨｽﾌﾟﾚｲだと0.885がおすすめ)</div>
-
-
-
+        <br>
+        <!-- <button id="newtab">newtabで開く</button> -->
         <script src="setting.js"></script>
 </body>
 
