history実装したいかも...?のお気持ち

--- a/Twitter_Scroll_Meter/setting.html
+++ b/Twitter_Scroll_Meter/setting.html
@@ -78,6 +78,8 @@
             <button id="setFactor">設定する</button>
         </div>
         <div>(自分が確認したRetinaﾃﾞｨｽﾌﾟﾚｲだと0.885がおすすめ)</div>
+        <br>
+        <div>設定の変更後、X/Twitterを再読み込みしてください。</div>
         <!-- <br> -->
         <!-- <button id="newtab">newtabで開く</button> -->
         <script src="setting.js"></script>
