機能追加/不具合修正/内部処理変更
以下の機能を追加
・単位変更
・桁数変更
使用可能単位：px/m/in/ft/yd/mi/尺/海里/au/ly/pc/Å/fathom

 DDなどの値を0にするとfalse扱いになってifのとこでおかしくなるバグを修正

保存を物理pixelにすることにした。
一部最適化

--- a/Twitter_Scroll_Meter/popup.html
+++ b/Twitter_Scroll_Meter/popup.html
@@ -38,8 +38,8 @@
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             display: inline-block;
-            width: 100%;
-            max-width: 250px;
+            width: auto;
+            min-width: 250px;
         }
 
         #t {
@@ -61,7 +61,7 @@
     <div class="container">
         <p id="t">You've scrolled</p>
         <span id="result">0</span>
-        <span id="t">[m]</span>
+        <span id="unit">[m]</span>
     </div>
     <div id="setting"><a href="setting.html">settings</a></div>
     <script src="popup.js"></script>
