--- a/Twitter_Scroll_Meter/setting.html
+++ b/Twitter_Scroll_Meter/setting.html
@@ -5,6 +5,10 @@
     <title>Test</title>
     <meta charset="UTF-8">
     <style>
+        body {
+            width: 300px;
+        }
+
         h3 {
             margin-top: 5px;
             margin-bottom: 5px;
@@ -31,81 +35,68 @@
 </head>
 
 <body>
+    <h3>設定画面</h3>
 
-    <h3>正確に測定するために設定してください</h2>
+    <div id="ppi-display">PPI: 未設定</div>
+    <button id="setPPI">PPI設定・変更はこちら</button>
 
-        <div class="input-group">
-            <label for="screen-size">画面サイズ(inch):</label>
-            <input type="number" id="screen-size" placeholder="ex: 15.6" step="0.1">
-        </div>
+    <br>
 
-        <div class="input-group">
-            <label for="screen-width">解像度(横):</label>
-            <input type="number" id="screen-width" placeholder="ex: 1920">
-        </div>
+    <div id="rectangle"></div>
+    <div id="tateyoko"></div>
+    <div>(違うなら下の補正係数をいじってください)</div>
 
-        <div class="input-group">
-            <label for="screen-height">解像度(縦):</label>
-            <input type="number" id="screen-height" placeholder="ex: 1080">
-        </div>
+    <br>
 
-        <button id="calculatePPI">PPIを計算・設定する</button>
-        <div id="ppi-display">PPI: 未設定</div>
+    <h3>高度な設定</h3>
+    <div class="input-group">
+        <label for="measure_type">計測タイミング :</label>
+        <select id="measure_type">
+            <option value="both" selected>全てのスクロール</option>
+            <option value="downOnly">下スクロールのみ</option>
+            <option value="upOnly">(上スクロールのみ)</option>
+        </select>
+    </div>
+    <div class="input-group">
+        <label for="useUnit">表示単位 :</label>
+        <select id="useUnit">
+            <option value="pixels">物理ピクセル [px]</option>
+            <option value="meters" selected>メートル [m]</option>
+            <option value="inch">インチ [in]</option>
+            <option value="feet">フィート [ft]</option>
+            <option value="yard">ヤード [yd]</option>
+            <option value="mile">マイル [mi]</option>
+            <option value="尺">尺 [尺]</option>
+            <option value="海里">海里 [海里]</option>
+            <option value="天文単位">天文単位 [au]</option>
+            <option value="光年">光年 [ly]</option>
+            <option value="parsec">パーセク [pc]</option>
+            <option value="angstrom">オングストローム [Å]</option>
+            <option value="fathom_e">ファゾム(英) [fathom]</option>
+            <option value="fathom_g">ファゾム(独) [fathom]</option>
+            <option value="fathom_w">ファゾム(維納) [fathom]</option>
+        </select>
+    </div>
+    <div class="input-group">
+        <label for="digit">表示桁数 :</label>
+        <input type="number" id="digit" placeholder="default: 2">
+        <button id="setDigit">設定する</button>
+    </div>
+    <div class="input-group">
+        <label for="debounceDelay">更新頻度 :</label>
+        <input type="number" id="debounceDelay" placeholder="default: 30">
+        <button id="setDebounceDelay">設定する</button>
+    </div>
+    <div class="input-group">
+        <label for="factor">補正係数 :</label>
+        <input type="number" id="factor" placeholder="default: 1">
+        <button id="setFactor">設定する</button>
+    </div>
+    <div>(自分が確認したRetinaﾃﾞｨｽﾌﾟﾚｲだと0.885がおすすめ)</div>
 
-        <!-- 300x200の四角形 -->
-        <div id="rectangle"></div>
-        <div id="tateyoko"></div>
-        <div>(違うなら下の補正係数をいじってください)</div>
-
-
-        <h3>高度な設定</h3>
-        <div class="input-group">
-            <label for="measure_type">計測タイミング :</label>
-            <select id="measure_type">
-                <option value="both" selected>全てのスクロール</option>
-                <option value="downOnly">下スクロールのみ</option>
-                <option value="upOnly">(上スクロールのみ)</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label for="useUnit">表示単位 :</label>
-            <select id="useUnit">
-                <option value="pixels">物理ピクセル [px]</option>
-                <option value="meters" selected>メートル [m]</option>
-                <option value="inch">インチ [in]</option>
-                <option value="feet">フィート [ft]</option>
-                <option value="yard">ヤード [yd]</option>
-                <option value="mile">マイル [mi]</option>
-                <option value="尺">尺 [尺]</option>
-                <option value="海里">海里 [海里]</option>
-                <option value="天文単位">天文単位 [au]</option>
-                <option value="光年">光年 [ly]</option>
-                <option value="parsec">パーセク [pc]</option>
-                <option value="angstrom">オングストローム [Å]</option>
-                <option value="fathom_e">ファゾム(英) [fathom]</option>
-                <option value="fathom_g">ファゾム(独) [fathom]</option>
-                <option value="fathom_w">ファゾム(維納) [fathom]</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label for="digit">表示桁数 :</label>
-            <input type="number" id="digit" placeholder="default: 2">
-            <button id="setDigit">設定する</button>
-        </div>
-        <div class="input-group">
-            <label for="debounceDelay">更新頻度 :</label>
-            <input type="number" id="debounceDelay" placeholder="default: 30">
-            <button id="setDebounceDelay">設定する</button>
-        </div>
-        <div class="input-group">
-            <label for="factor">補正係数 :</label>
-            <input type="number" id="factor" placeholder="default: 1">
-            <button id="setFactor">設定する</button>
-        </div>
-        <div>(自分が確認したRetinaﾃﾞｨｽﾌﾟﾚｲだと0.885がおすすめ)</div>
-        <!-- <br> -->
-        <!-- <button id="newtab">newtabで開く</button> -->
-        <script src="setting.js"></script>
+    <!-- <br> -->
+    <!-- <button id="newtab">newtabで開く</button> -->
+    <script src="setting.js"></script>
 </body>
 
 </html>
