--- a/Twitter_Scroll_Meter/setPPI.html
+++ b/Twitter_Scroll_Meter/setPPI.html
@@ -10,6 +10,10 @@
             margin-bottom: 5px;
         }
 
+        h3 {
+            color: red;
+        }
+
         #ppi-display {
             margin-top: 10px;
             font-size: 18px;
@@ -17,8 +21,8 @@
         }
 
         #rectangle {
-            width: 300px;
-            height: 200px;
+            width: 600px;
+            height: 400px;
             background-color: lightblue;
             margin-top: 10px;
             border: 1px solid black;
@@ -52,7 +56,7 @@
     <button id="calculatePPI">PPIを計算・設定する</button>
     <div id="ppi-display">PPI: 未設定</div>
 
-    <!-- 300x200の四角形 -->
+    <!-- 600x400の四角形 -->
     <div id="rectangle"></div>
     <div id="tateyoko"></div>
     <div>(違うなら下の補正係数をいじってください)</div>
