制限撤廃/軽微な修正

--- a/Twitter_Scroll_Meter/setting.html
+++ b/Twitter_Scroll_Meter/setting.html
@@ -30,6 +30,7 @@
 
         .input-group {
             margin-bottom: 5px;
+            height: 25px;
         }
 
         /* ツールチップのスタイル */
@@ -126,7 +127,7 @@
             <label for="threshold">閾値[px] :</label>
             <span class="tooltiptext">一回の更新の最大値</span>
         </div>
-        <input type="number" id="threshold" placeholder="default: ?">
+        <input type="number" id="threshold" placeholder="default: 10000">
         <button id="setThreshold">設定する</button>
     </div>
     <div class="input-group">
