--- a/history.html
+++ b/history.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>Twitter Scroll Meter</title>
+    <title>Twitter Scroll History</title>
     <meta charset="UTF-8">
     <style>
     </style>
 </head>
 
 <body>
-    <h2>Scroll Meter History</h2>
+    <h2>Twitter Scroll History</h2>
 
     <div id="setting"><a href="setting.html">settings</a></div>
     <script src="history.js"></script>
